fix: Alignment in week number cell

--- a/src/Vue3DatePicker/style/components/_Calendar.scss
+++ b/src/Vue3DatePicker/style/components/_Calendar.scss
@@ -67,4 +67,5 @@
 
 .dp__week_num {
     color: var(--secondary-color);
+    text-align: center;
 }
